--- a/Chicofgo_react_main/src/component/Footer/css/Footer.module.scss
+++ b/Chicofgo_react_main/src/component/Footer/css/Footer.module.scss
@@ -1,13 +1,9 @@
-
 @import '../../../global-styles/global.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap'); 
 
 
 
-.img1 {
-  object-fit: contain;
-  
-}
+
 
 
 footer {
@@ -16,7 +12,7 @@ footer {
   background-color: rgb(238, 238, 238);
 }
 
-.sociallink-wrap {
+.sociallink_wrap {
  padding-left: 17%;
  padding-right: 17%;
 }
@@ -26,7 +22,7 @@ text-decoration: none;
 font-family: 'Roboto', sans-serif;
 font-size: 17px;
 color: black;
-font-weight: bold;
+
 }
 
 .sociallink a img{
@@ -37,4 +33,3 @@ font-weight: bold;
 .sociallink {
   margin-top: -20px;
 }
-
