新增共通container，可參照檔案內部布局

--- a/Chicofgo_react_main/src/global-styles/global.scss
+++ b/Chicofgo_react_main/src/global-styles/global.scss
@@ -8,10 +8,25 @@ $mainColor:rgb(161, 113, 98);
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@mixin make-container($padding-x: $container-padding-x) {
+    width: 70%;
+    padding-right: $padding-x;
+    padding-left: $padding-x;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+// Usage
+.custom-container {
+    @include make-container();
+  }
+
 
 
 .maincolor {
     color:rgb(161, 113, 98);
+    
+    
 }
 .mainbackground {
     background-color:rgb(161, 113, 98);
