--- a/Chicofgo_react_main/src/component/Products/List.module.scss
+++ b/Chicofgo_react_main/src/component/Products/List.module.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #f5f5f5;
+    background-color: rgb(250, 250, 250);
 }
 
 label {
@@ -10,7 +10,7 @@ label {
     width: 100%;
     height: 1731px;
     // background-color: rgb(126, 109, 109);
-    margin-left: 0px;
+    // margin-left: 0px;
 }
 
 .sidebar {
@@ -50,14 +50,27 @@ label {
     border-radius: 5px;
 }
 
-@keyframes sheen {
-    0% {
-      transform: skewY(-45deg) translateX(0);
-    }
-    100% {
-      transform: skewY(-45deg) translateX(12.5em);
-    }
-  }
+// @keyframes sheen {
+//     0% {
+//       transform: skewY(-45deg) translateX(0);
+//     }
+//     100% {
+//       transform: skewY(-45deg) translateX(12.5em);
+//     }
+//   }
+
+.card_group {
+    width: 1000px;
+    height: 1490px;
+    background-color: pink;
+}
+
+.card_control {
+    width: 240px;
+    height: 360px;
+    padding: 0px;
+    background-color: peachpuff;
+}
 
   
 
