--- a/Chicofgo_react_main/src/component/navbar/navbar.scss
+++ b/Chicofgo_react_main/src/component/navbar/navbar.scss
@@ -1,6 +1,6 @@
 .navbar-w{
    width: 100% ;
-   background-color: aquamarine;
+   background-color: white;
 }
 
 @import '~bootstrap/scss/bootstrap';
