--- a/Chicofgo_react_main/src/component/navbar/navbar.scss
+++ b/Chicofgo_react_main/src/component/navbar/navbar.scss
@@ -1,6 +1,11 @@
+body{
+  padding-top: 140px;
+}
+
 .navbar-w{
    width: 100% ;
-   background-color: white;
+   background-color:white;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 @import '~bootstrap/scss/bootstrap';
