--- a/Chicofgo_react_main/src/Layout/Item/Path/Path.module.scss
+++ b/Chicofgo_react_main/src/Layout/Item/Path/Path.module.scss
@@ -11,8 +11,16 @@
 .Path_wrap {
     width: 100%;
     height: 40px;
-    background-color:  rgb(248, 245, 234);
+    // background-color:  rgb(248, 245, 234);
 }
+
+@media (min-width: 1440px){
+    .Path_wrap {
+        margin: 0 2%;
+    }
+}
+    
+
 
 @media (max-width: 375px) {
     .Path-wrap span {
