--- a/Chicofgo_react_main/src/pages/Products/component/List.module.scss
+++ b/Chicofgo_react_main/src/pages/Products/component/List.module.scss
@@ -1,3 +1,6 @@
+
+
+
 body {
     background-color: rgb(250, 250, 250);
 }
@@ -17,6 +20,13 @@ label {
     
     height: 1731px;
     // background-color: palegoldenrod;
+}
+
+@media screen and (min-width:1700px) {
+    .list_control {
+        width: 90%;
+        padding-left: 110px;
+    }
 }
 
 .block_brand {
