--- a/Chicofgo_react_main/src/GlobalStyles/Global.scss
+++ b/Chicofgo_react_main/src/GlobalStyles/Global.scss
@@ -11,6 +11,10 @@ $mainColor: rgb(161, 113, 98);
   margin-left: auto;
 }
 
+.body_color {
+  background-color: rgb(250, 250, 250);
+}
+
 // Usage
 .chicofgo_dark {
   background-color: rgb(38, 38, 38);
@@ -97,11 +101,23 @@ $mainColor: rgb(161, 113, 98);
   width: 140px;
   border-radius: 5px;
   border: none;
-  box-shadow: 0 3px 12px black;
-  background-color: rgb(161, 113, 98);
+  box-shadow: 0 3px 12px  black;
+  background-color:rgb(161, 113, 98);
+  outline: none;
+  &:active {
+      outline: none;
+  }
+  box-shadow: 0 3px 4px #0005;
+  
+
+  &:active {
+      transform: scale(0.95);
+  }
 }
+  
+
 .btn1:hover {
-  background-color: rgb(166, 155, 132);
+  background-color:  rgb(166, 155, 132);
   box-shadow: none;
-  transition: 0.5s;
+  transition: background-color .5s, box-shadow 0.5s, transform 0.1s;
 }
