--- a/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
@@ -3,6 +3,7 @@
 .list_container {
     max-width: 1015px;
     min-width: 1015px;
+   
 }
 
 
@@ -12,16 +13,11 @@ label {
 
 .list_control {
     width: 100%;
-    height: 1731px;
-    // background-color: rgb(126, 109, 109);
-    // margin-left: 0px;
+   
+   
 }
 
-.sidebar {
-    
-    height: 1731px;
-    // background-color: palegoldenrod;
-}
+
 
 
 
@@ -48,7 +44,12 @@ label {
     margin-top: 19px;
     width: 140px;
     border-radius: 5px;
-    box-shadow: 0 3px 4px black;
+    box-shadow: 0 3px 4px #0005;
+    &:hover {
+
+    }&:active {
+        transform: scale(0.95);
+    }
 }
 
 .text_c {
@@ -60,15 +61,9 @@ label {
 
 .card_group {
     width: 100%;
-    height: 1480px;
-    // background-color: pink;
-}
-
-.card_control {
-    width: 24%;
-    height: 360px;
-    padding: 0px;
-    // background-color: rgb(65, 41, 20);
+   
+    margin-bottom: 200px;
+    
 }
 
   
