--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/ProductDetail.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/ProductDetail.module.scss
@@ -1,10 +1,15 @@
-
+// body {
+//     background-color: rgb(238, 238, 238);
+// }
 
 @media  (min-width: 1440px){
 
-    .detail_contorl {
-        padding: 0 2%;
-    }
+  
+}
+
+.detail_contorl {
+    max-width: 1015px;
+    min-width: 1015px;
 }
 
 
@@ -12,7 +17,7 @@
     width: 100%;
     height: 4500px;
     padding: 40px 80px; 
-    background-color: papayawhip;
+    background-color: #ffff;
 }
 
 .product_box {
@@ -21,24 +26,55 @@
     background-color: peru;
 }
 
-.left_pic{
+.left_picbox{
     width: 50%;
     height: 700px;
     margin-right: 30px;
     background-color: rgb(238, 238, 238);
     flex-direction: column;
-    padding: 90px 20px ;
+    padding: 90px 30px ;
 }
 
 .main_pic {
     width: 338px;
     height: 416px;
-    background-color: red;
+    
+    background-color:#ffff;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
+
+.group_pic_box {
+    width: 338px;
+    height: 100px;
+    padding: 4px;
+    background-color: rgb(238, 238, 238);
+
+    .group_pic {
+        width: 80px;
+        height: 80px;
+        background-color: blueviolet;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+}
+
 
 .detail_content {
     width: 50%;
     height: 700px;
     margin-left: 30px;
     background-color: blueviolet;
+}
+
+.btn_contorl {
+    margin-top: -24px;
 }
