--- a/Chicofgo_react_main/src/Layout/Footer/Css/Footer.scss
+++ b/Chicofgo_react_main/src/Layout/Footer/Css/Footer.scss
@@ -1,5 +1,5 @@
 
-@import '../../../Global-styles/Global.scss';
+// @import '../../../Global-styles/Global.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap'); 
 
 
