--- a/Chicofgo_react_main/src/Layout/Footer/Css/Footer.module.scss
+++ b/Chicofgo_react_main/src/Layout/Footer/Css/Footer.module.scss
@@ -1,4 +1,4 @@
-@import '../../../GlobalStyles/Global.scss';
+// @import '../../../GlobalStyles/Global.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
 
 footer {
