[feat]會員優惠券+會員訊息排版

--- a/Chicofgo_react_main/src/Pages/Home/Home.module.scss
+++ b/Chicofgo_react_main/src/Pages/Home/Home.module.scss
@@ -32,7 +32,7 @@ span {
 }
 
 .cardListS p {
-  background-image: url(./Component/RecommendedToday.svg);
+  background-image: url(../../Img/Home/RecommendedToday.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
