--- a/Chicofgo_react_main/src/Pages/Coupon/Component/CouponCard.module.scss
+++ b/Chicofgo_react_main/src/Pages/Coupon/Component/CouponCard.module.scss
@@ -1,5 +1,5 @@
-.ticket-content2 {
-  background-image: url(./coupon-card-bg2.svg);
+.ticketContent {
+  background-image: url(../../../Img/Coupon/coupon-card-bg.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
