--- a/Chicofgo_react_main/src/Pages/Coupon/Component/CouponCard2.module.scss
+++ b/Chicofgo_react_main/src/Pages/Coupon/Component/CouponCard2.module.scss
@@ -1,10 +1,10 @@
-.ticket-content {
-  background-image: url(./coupon-card-bg.svg);
+.ticketContent {
+  background-image: url(../../../Img/Coupon/coupon-card-bg2.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   h3 {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
   }
 }
