--- a/Chicofgo_react_main/src/Pages/Coupon/Component/CouponCard3.module.scss
+++ b/Chicofgo_react_main/src/Pages/Coupon/Component/CouponCard3.module.scss
@@ -1,5 +1,5 @@
-.ticket-content3 {
-  background-image: url(./coupon-card-bg3.svg);
+.ticketContent {
+  background-image: url(../../../Img/Coupon/coupon-card-bg3.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
