[feat]增加會員收藏+會員通知

--- a/Chicofgo_react_main/src/Pages/Account/Account.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/Account.module.scss
@@ -25,6 +25,7 @@
     // @include fontFamily;
     color: rgb(161, 113, 98);
     font-size: 32px;
+    font-weight: 700;
   }
   h5 {
     // @include fontFamily;
