--- a/Chicofgo_react_main/src/GlobalStyles/Global.scss
+++ b/Chicofgo_react_main/src/GlobalStyles/Global.scss
@@ -150,3 +150,17 @@ $mainColor: rgb(161, 113, 98);
   font-family: 'Noto Sans TC', sans-serif;
   font-weight: 900;
 }
+
+.nav-chicofgo-brown {
+  // .nav-link {
+  //   background: none;
+  //   border: 0;
+  //   border-radius: 0.375rem;
+  //   color: rgb(73, 67, 61);
+  // }
+  .nav-link.active {
+    color: rgb(255, 255, 255);
+    background: rgb(161, 113, 98);
+    border-radius: 10px;
+  }
+}
