--- a/Chicofgo_react_main/src/GlobalStyles/Global.scss
+++ b/Chicofgo_react_main/src/GlobalStyles/Global.scss
@@ -164,3 +164,8 @@ $mainColor: rgb(161, 113, 98);
     border-radius: 10px;
   }
 }
+
+.border-chicofgo-white {
+  // background-color: rgb(250, 250, 250);
+  border-color: rgb(250, 250, 250);
+}
