--- a/Chicofgo_react_main/src/GlobalStyles/Global.scss
+++ b/Chicofgo_react_main/src/GlobalStyles/Global.scss
@@ -98,11 +98,12 @@ $mainColor: rgb(161, 113, 98);
 .btn1 {
   color: whitesmoke;
   height: 36px;
-  width: 140px;
+  width: auto;
   border-radius: 5px;
   border: none;
   box-shadow: 0 3px 12px  black;
   background-color:rgb(161, 113, 98);
+  text-decoration:none;
   outline: none;
   &:active {
       outline: none;
