--- a/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
+++ b/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
@@ -8,6 +8,14 @@
 
 .card_contorl:hover {
   top: -10px;
+  
+ .card_body{
+  box-sizing: content-box;
+  border-style: solid;
+  border-width: 3px 3px 20px 3px;
+  border-color: rgb(161, 113, 98);
+ }
+  
 }
 
 .card_body {
@@ -44,4 +52,22 @@
   width: 100%;
   height: 40px;
   background-color: rgb(238, 238, 238);
+
+  .price_contorl {
+   margin-left: 32px;
+    font-weight: bold;
+    font-size: 20px;
+  }
+
+  .mark_contorl{
+   margin-left: 28px;
+   color:rgb(161, 113, 98);
+   font-size: 20px;
+  }
+  .cart_contorl{
+    margin-left: 15px;
+    color:rgb(161, 113, 98);
+    font-size: 23px;
+  }
 }
+
