--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/ProductDetail.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/ProductDetail.module.scss
@@ -1,6 +1,9 @@
 // body {
 //     background-color: rgb(238, 238, 238);
 // }
+.test {
+    background-color: rgb(238, 238, 238);
+}
 
 @media  (min-width: 1440px){
 
@@ -15,66 +18,38 @@
 
 .product_detail {
     width: 100%;
-    height: 4500px;
+    height: auto;
     padding: 40px 80px; 
-    background-color: #ffff;
+    background-color:rgb(250, 250, 250);
 }
 
 .product_box {
     width: 100%;
-    height: 4500px;
-    background-color: peru;
+    height:auto;
+    // background-color: peru;
 }
-
-.left_picbox{
-    width: 50%;
-    height: 700px;
-    margin-right: 30px;
-    background-color: rgb(238, 238, 238);
-    flex-direction: column;
-    padding: 90px 30px ;
-}
-
-.main_pic {
-    width: 338px;
-    height: 416px;
-    
-    background-color:#ffff;
-
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-}
-
-.group_pic_box {
-    width: 338px;
-    height: 100px;
-    padding: 4px;
-    background-color: rgb(238, 238, 238);
-
-    .group_pic {
-        width: 80px;
-        height: 80px;
-        background-color: blueviolet;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-    }
-}
-
 
 .detail_content {
     width: 50%;
     height: 700px;
     margin-left: 30px;
-    background-color: blueviolet;
+    // background-color: blueviolet;
 }
 
 .btn_contorl {
     margin-top: -24px;
+    
 }
+
+.specification_box{
+    width: 100%;
+    height: auto;
+    
+}
+
+.orther_product{
+    width: 100%;
+    height: auto;
+}
+
+
