--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/OtherSwiper.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/OtherSwiper.module.scss
@@ -7,6 +7,6 @@
     padding-bottom: 40px;
     background-color: rgb(250, 250, 250);
     .title_contorl{
-        margin-left: 42%;
+        // margin-left: 42%;
     }
 }
