--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
@@ -4,6 +4,18 @@ p, h3, h4 {
 .spe_text {
     font-size: 13px;
 }
+
+.title_box{
+    width: 100%;
+    height: 150px;
+  
+}
+
+.content_box{
+    width: 100%;
+    height: 150px;
+   
+}
 .minus_style{
     width: 36px;
     height: 36px;
