[feat]購物車checkbox修改

--- a/Chicofgo_react_main/src/Layout/Item/Path/Path.module.scss
+++ b/Chicofgo_react_main/src/Layout/Item/Path/Path.module.scss
@@ -12,10 +12,10 @@
   text-decoration: none;
 }
 
-.Path_font span {
-  font-weight: 700;
-  color: white;
-}
+// .Path_font span {
+//   font-weight: 700;
+//   color: white;
+// }
 
 .Path_wrap {
   width: 100%;
