--- a/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
+++ b/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
@@ -7,13 +7,15 @@
 }
 
 .card_contorl:hover {
-  top: -10px;
+  // top: -10px;
+  transform: translateY(-10px);
   
  .card_body{
-  box-sizing: content-box;
-  border-style: solid;
-  border-width: 3px 3px 20px 3px;
-  border-color: rgb(161, 113, 98);
+  // box-sizing: content-box;
+  // border-style: solid;
+  // border-width: 3px 3px 20px 3px;
+  // border-color: rgb(161, 113, 98);
+  box-shadow: 0px 5px 10px rgb(131, 131, 131);
  }
   
 }
@@ -22,6 +24,7 @@
   width: 200px;
   height: 360px;
   background-color: #ffff;
+  transition: 0.2s;
 }
 
 .p_img_c {
