[feat]頁面調整+購物車修改

--- a/Chicofgo_react_main/src/Pages/Home/Home.module.scss
+++ b/Chicofgo_react_main/src/Pages/Home/Home.module.scss
@@ -25,10 +25,10 @@ span {
   font-weight: 500;
 }
 
-.pageTitle {
+.pageTitle p{
   font-size: 32px;
   font-weight: 700;
-  color: rgb(161, 113, 98);
+  // color: rgb(161, 113, 98);
 }
 
 .cardListS p {
