--- a/Chicofgo_react_main/src/Pages/Login/Login.module.scss
+++ b/Chicofgo_react_main/src/Pages/Login/Login.module.scss
@@ -3,32 +3,19 @@
   background-position: 0 0 0 0;
 }
 
-.textNoDecoration {
-  text-decoration: none;
-}
-
 .content {
+  margin-top: 70px;
   max-width: 450px;
-  // height: 500px;
   padding: 30px 50px;
   background-color: #fff;
   box-shadow: -30px 20px 20px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
 }
+
 @media (max-width: 767px) {
-  .content{
+  .content {
     padding: 3vh;
   }
-  
-}
-
-.registerContent {
-  background-color: #f8f5ea;
-}
-
-title {
-  color: #a17162;
-  font-weight: 900;
 }
 
 .img {
@@ -41,31 +28,23 @@ title {
 
 .formControl {
   padding: 30px;
-  border-top: 8px solid #f8f5ea;
+  border-top: 5px solid #f8f5ea;
 }
+
 @media (max-width: 767px) {
-  .formControl{
-    padding: 10px 0 0 0 ;
+  .formControl {
+    padding: 10px 0 0 0;
   }
-}
-
-.registerControl {
-  border-top: 8px solid #fff;
-}
-
-.goRegisterBtn {
-  color: #a17162;
 }
 
 .form {
   max-width: 300px;
 }
 
-.doRegisterBtn {
+.loginBtn {
+  display: inline-block;
   width: 200px;
   height: 40px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  background-color: #a17162;
-  color: #fff;
 }
