--- a/Chicofgo_react_main/src/Pages/Login/Register.module.scss
+++ b/Chicofgo_react_main/src/Pages/Login/Register.module.scss
@@ -3,11 +3,8 @@
   background-position: 0 0 0 0;
 }
 
-.textNoDecoration {
-  text-decoration: none;
-}
-
 .content {
+  margin-top: 70px;
   max-width: 450px;
   // height: 500px;
   padding: 30px 50px;
@@ -15,16 +12,15 @@
   box-shadow: -30px 20px 20px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
 }
+
 @media (max-width: 767px) {
-  .content{
+  .content {
     padding: 3vh;
   }
-  
 }
 
-title {
-  color: #a17162;
-  font-weight: 900;
+.registerContent {
+  background-color: #fff;
 }
 
 .img {
@@ -37,29 +33,22 @@ title {
 
 .formControl {
   padding: 30px;
-  border-top: 8px solid #f8f5ea;
-}
-@media (max-width: 767px) {
-  .formControl{
-    padding: 10px 0 0 0 ;
-  }
+  border-top: 5px solid #f8f5ea;
 }
 
-.goRegisterBtn {
-  color: #a17162;
+@media (max-width: 767px) {
+  .formControl {
+    padding: 10px 0 0 0;
+  }
 }
 
 .form {
   max-width: 300px;
 }
 
-.loginBtn {
-  display: inline-block;
+.doRegisterBtn {
   width: 200px;
   height: 40px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  background-color: #a17162;
-  color: #fff;
 }
-
