--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/PauseOnHover.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/PauseOnHover.scss
@@ -13,3 +13,8 @@ button.slick-arrow.slick-next{
 {
     color: rgb(161, 113, 98);
 }
+
+.slick-list {
+    height: 360px;
+    overflow-x: hidden;
+}
