--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
@@ -14,6 +14,9 @@ p, h3, h4 {
 .content_box{
     width: 100%;
     height: 150px;
+    font-weight:bold;
+    line-height: 30px;
+    letter-spacing: 2px;
    
 }
 .minus_style{
