--- a/Chicofgo_react_main/src/Pages/Account/Account.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/Account.module.scss
@@ -22,17 +22,15 @@
 }
 .formText {
   h2 {
-    // @include fontFamily;
     color: rgb(161, 113, 98);
     font-size: 32px;
     font-weight: 700;
   }
   h5 {
-    // @include fontFamily;
-    padding-bottom: 5px;
-    border-bottom: 4px solid #eeeeee;
+    // padding-top: 15px;
+    // padding-top: 100px;
+    border-top: 4px solid #eeeeee;
     font-size: 18px;
-    // vertical-align: bottom;
     padding: 0;
   }
   button {
@@ -40,9 +38,21 @@
     padding-bottom: 10px;
   }
 }
-.datePicker{
+.datePicker {
   max-width: 125px;
-  button{
+  button {
     margin-top: 5px;
+  }
+}
+.setBorder {
+  border-bottom: 4px solid #eeeeee;
+}
+.birthdayError {
+  span {
+    color: #fff;
+    font-size: 1rem;
+    background: rgba(220, 53, 69, 0.9);
+    border-radius: 5px;
+    padding: 3px 5px;
   }
 }
