--- a/Chicofgo_react_main/src/GlobalStyles/Global.scss
+++ b/Chicofgo_react_main/src/GlobalStyles/Global.scss
@@ -139,6 +139,11 @@ $mainColor: rgb(161, 113, 98);
   @include button-variant(rgb(54, 111, 84), rgb(54, 111, 84));
 }
 
+.btn-chicofgo-khaki {
+  background-color: rgb(166, 155, 132);
+  @include button-variant(rgb(166, 155, 132), rgb(166, 155, 132));
+}
+
 .btn-outline-chicofgo-brown {
   border-color: rgb(206, 212, 218);
   @include button-outline-variant(rgb(161, 113, 98));
