--- a/Chicofgo_react_main/src/Pages/Account/ShoppingCart/ShoppingCart.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/ShoppingCart/ShoppingCart.module.scss
@@ -11,3 +11,18 @@
     padding-left: 10px;
   }
 }
+.checkoutTable {
+  td,
+  th {
+    width: auto;
+  }
+  th {
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-style: Black;
+    font-size: 20px;
+    line-height: 24px;
+    vertical-align: top;
+    color: rgb(166, 155, 132);
+  }
+}
