--- a/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
+++ b/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
@@ -59,7 +59,8 @@
   background-color: rgb(238, 238, 238);
 
   .price_contorl {
-   margin-left: 32px;
+    width: 60px;
+    margin-left: 32px;
     font-weight: bold;
     font-size: 20px;
   }
