--- a/Chicofgo_react_main/src/Pages/Account/Account.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/Account.module.scss
@@ -11,7 +11,7 @@
 .imgLimitIcon button {
   font-size: 35px;
   color: rgb(161, 113, 98);
-  margin-top: 5px;
+  // margin-top: 5px;
   margin-left: 10px;
 }
 .imgLimitText {
