[feat]會員修改微調

--- a/Chicofgo_react_main/src/Pages/Account/Account.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/Account.module.scss
@@ -56,3 +56,12 @@
     padding: 3px 5px;
   }
 }
+.photoError {
+  span {
+    color: #fff;
+    font-size: 1rem;
+    background: rgba(220, 53, 69, 0.9);
+    border-radius: 5px;
+    padding: 3px 5px;
+  }
+}
