--- a/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
@@ -3,6 +3,8 @@
   max-width: 1015px;
   min-width: 1015px;
 
+  
+
 }
 
 label {
@@ -66,10 +68,33 @@ label {
 .card_group {
 
     width: 100%;
-   
+ 
     margin-bottom: 200px;
+
+    .pages {
+      margin-left: 140px;
+      margin: 0;
+    }
     
 
 }
+.productd_search{
+  width: 250px;
+ 
+ 
+  margin-bottom: 10px;
+margin-right: 4px;
+  
+}
+
+.list_sendCart{
+  width: 70px;
+  height: 50px;
+  background-color: black;
+  margin-top: -48px;
+  margin-left: 130px;
+}
+
+
 
 
