[feat]歷史訂單完成

--- a/Chicofgo_react_main/src/Pages/Order/OrderStatus.module.scss
+++ b/Chicofgo_react_main/src/Pages/Order/OrderStatus.module.scss
@@ -4,7 +4,7 @@
   color: rgb(161, 113, 98);
 }
 .orderStatusTitle {
-  color: rgb(161, 113, 98);
+  // color: rgb(161, 113, 98);
   h4 {
     font-size: 25px;
     font-weight: 700;
@@ -62,6 +62,7 @@
   }
   span {
     font-size: 16px;
+    margin-left: 10px;
   }
 }
 .recipientTable {
