--- a/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
+++ b/Chicofgo_react_main/src/Pages/ComponentShare/Card.module.scss
@@ -74,6 +74,15 @@
     margin-left: 15px;
     color:rgb(161, 113, 98);
     font-size: 23px;
+    flex-grow: 1;
   }
+}
+
+.list_sendCart{
+  width: 70px;
+  height: 50px;
+  background-color: black;
+  margin-top: -48px;
+  margin-left: 130px;
 }
 
