--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/OtherSwiper.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/OtherSwiper.module.scss
@@ -8,5 +8,6 @@
     background-color: rgb(250, 250, 250);
     .title_contorl{
         // margin-left: 42%;
+        color: rgb(73, 67, 61);
     }
 }
