--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
@@ -87,7 +87,7 @@
 }
 
 .btn_cart {
-  margin-left: 40px;
+  margin-left: 70px;
   margin-top: 77px;
   color: whitesmoke;
   width: 184px;
@@ -106,4 +106,12 @@
   &:active {
     transform: scale(0.95);
   }
+}
+
+.box{
+  width: 170px;
+}
+
+.o_box{
+  margin-left: 10px;
 }
