--- a/Chicofgo_react_main/src/Pages/Account/Components/SideBar.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/Components/SideBar.module.scss
@@ -1,18 +1,32 @@
 .SideBarBody {
   background: rgba(238, 238, 238, 0.9);
-
   padding-top: 100px;
-  P {
-    color: rgb(166, 155, 132);
-    margin: auto;
-    font-weight: 700;
-    font-size: 18px;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 15%;
-    padding-right: 15%;
-  }
+  margin: 0 auto;
+  text-align: center;
+
   a {
+    max-width: 200px;
     padding: 0;
+
+    p {
+      color: rgb(166, 155, 132);
+      margin: auto;
+      font-weight: 700;
+      font-size: 20px;
+    }
+  }
+}
+
+@media (max-width:768px) {
+  .SideBarBody {
+    padding: 10px 5px;
+    a {
+      z-index: 999;
+      margin: 0 5px;
+      p {
+        font-size: 16px;
+      }
+    }
+
   }
 }
