--- a/Chicofgo_react_main/src/Pages/Account/ShoppingCart/Components/ShoppingItem.module.scss
+++ b/Chicofgo_react_main/src/Pages/Account/ShoppingCart/Components/ShoppingItem.module.scss
@@ -20,6 +20,22 @@
     }
   }
 }
+
+@media (max-width:768px) {
+  .tableText{
+    h3{
+      font-size: 16px;
+    }
+    tbody{
+      th{
+        width: 20%;
+      }
+      td{
+        width: 80%;
+      }
+    }
+  }
+}
 .totalPrice {
   background-color: rgb(250, 250, 250);
   span {
