--- a/Chicofgo_react_main/src/Pages/ComponentShare/ThisCard.module.scss
+++ b/Chicofgo_react_main/src/Pages/ComponentShare/ThisCard.module.scss
@@ -14,3 +14,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.LinkHover:hover {
+  color: rgb(54, 111, 84);
+  font-weight: 700;
+}
+.useFinger {
+  cursor: pointer;
+}
