--- a/Chicofgo_react_main/src/Pages/Order/OrderStatus.module.scss
+++ b/Chicofgo_react_main/src/Pages/Order/OrderStatus.module.scss
@@ -20,6 +20,9 @@
   span {
     margin: 0;
     font-size: 15px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
   svg {
     margin-bottom: 4px;
@@ -57,6 +60,9 @@
 .orderItem {
   background: #eeeeee;
   padding: 12.5px 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   p {
     font-size: 18px;
   }
