--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/ProductInfo.module.scss
@@ -115,3 +115,16 @@
 .o_box{
   margin-left: 10px;
 }
+
+@media  (max-width: 768px){
+  .info_contorl{
+    width: 400px;
+    padding: 10px;
+  }
+.title_box{
+  width: 380px;
+}
+
+
+  
+}
