--- a/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
@@ -2,6 +2,7 @@
 
   max-width: 1015px;
   min-width: 1015px;
+ 
 
   
 
@@ -95,6 +96,21 @@ margin-right: 4px;
   margin-left: 130px;
 }
 
+@media  (max-width: 768px){
+
+  .custom-container{
+    padding: 0px;
+   
+  }
+
+  .list_container{
+    min-width: auto;
+    margin-left: -70px;
+    margin-right: -70px;
+    width: 600px;
+    
+  }
 
 
+}
 
