--- a/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/Specification.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/ProductDetail/Component/Specification.module.scss
@@ -10,7 +10,7 @@
     background-color: rgb(250, 250, 250);
 
     .spec_info {
-        width: 930px;
+        width: 100%;
         height: auto;
         border-radius: 30px;
         background-color: rgb(238, 238, 238);
@@ -20,5 +20,16 @@
         letter-spacing: 2px;
        
         
+    }
+}
+
+@media  (max-width: 768px){
+    .spec_contorl{
+        width: 400px;
+        padding: 10px;
+    }
+    .spec_info{
+        width: 400px;
+    
     }
 }
