--- a/Chicofgo_react_main/src/Pages/Business/Components/BusinessSiderbar.module.scss
+++ b/Chicofgo_react_main/src/Pages/Business/Components/BusinessSiderbar.module.scss
@@ -9,7 +9,7 @@
 }
 
 @media(max-width:768px){
-    ul{
+    .BusinessUl{
         flex-direction: row;
         height: 30vh;
         display:flex;
