[feat]首頁更新+新增sql資料夾

--- a/Chicofgo_react_main/src/Pages/Home/Home.module.scss
+++ b/Chicofgo_react_main/src/Pages/Home/Home.module.scss
@@ -86,11 +86,11 @@ span {
   color: rgb(161, 113, 98);
 }
 .pageTwoBtn {
-  color: rgb(250, 250, 250);
-  background: rgb(54, 111, 84);
-  border: 0px solid #000;
-  border-radius: 20px;
-  font-weight: 700;
+  // color: rgb(250, 250, 250);
+  // background: rgb(54, 111, 84);
+  // border: 0px solid #000;
+  // border-radius: 20px;
+  // font-weight: 700;
 }
 .pageTwoBg h5 {
   background: rgb(54, 111, 84);
