--- a/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
+++ b/Chicofgo_react_main/src/Pages/Products/Component/List.module.scss
@@ -29,7 +29,7 @@ label {
 
 
 .block_brand {
-  margin-top: 55px;
+  margin-top: 32px;
 }
 
 .block_cate {
@@ -110,7 +110,35 @@ margin-right: 4px;
     width: 600px;
     
   }
+  
+  .box1 {
+    width: 150px;
+   
+  }
 
+  .sidebar{
+
+   
+    justify-content:space-around
+    
+
+  }
+
+  .block_brand{
+    height: 340px;
+  }
+  .block_cate{
+    height: 270px;
+    margin: 0px;
+  }
+  .block_items {
+    
+    height: 340px;
+  }
+
+  .block_origin {
+    margin-top: 0px;
+  }
 
 }
 
